<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="progress_loading_content">Loading…</string>

    <!-- Timeline. -->
    <string name="timeline_error_obtain_timeline">Failed to obtain timeline.</string>
    <string name="timeline_tweet_retweet_by">Retweet by %1$s</string>
    <string name="timeline_empty_content">No tweets</string>

    <!-- Tweet action. -->
    <string name="timeline_tweet_action_retweet">Retweet</string>
    <string name="timeline_tweet_action_retweet_in_progress">Retweet…</string>
    <string name="timeline_tweet_action_retweet_failed">Failed to retweet.</string>
    <string name="timeline_tweet_action_likes">Likes</string>
    <string name="timeline_tweet_action_likes_in_progress">Likes…</string>
    <string name="timeline_tweet_action_likes_failed">Failed to like.</string>
    <string name="timeline_tweet_action_reply">Reply</string>
    <string name="timeline_tweet_action_show_photo">Photos</string>
    <string name="timeline_tweet_action_add_pocket">Add to Pocket</string>
    <string name="timeline_tweet_action_add_pocket_in_progress">Add to Pocket…</string>
    <string name="timeline_tweet_action_add_pocket_failed">Failed to add to Pocket.</string>

    <!-- My list -->
    <string name="my_lists_error_obtain_lists">Failed to obtain my list.</string>
    <string name="my_lists_empty_content">No lists</string>
</resources>