<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/tweet_action_reply"
        android:icon="@drawable/ic_tweet_action_reply"
        android:title="@string/timeline_tweet_action_reply"/>

    <item
        android:id="@+id/tweet_action_retweet"
        android:icon="@drawable/ic_tweet_action_retweet"
        android:title="@string/timeline_tweet_action_retweet"/>

    <item
        android:id="@+id/tweet_action_likes"
        android:icon="@drawable/ic_tweet_action_likes"
        android:title="@string/timeline_tweet_action_likes"/>

    <item
        android:id="@+id/tweet_action_show_photo"
        android:icon="@drawable/ic_tweet_action_show_photo"
        android:title="@string/timeline_tweet_action_show_photo"/>

    <item
        android:id="@+id/tweet_action_open_on_phone"
        android:icon="@drawable/ic_tweet_action_open_on_phone"
        android:title="@string/timeline_tweet_action_open_on_phone"/>

    <item
        android:id="@+id/tweet_action_add_pocket"
        android:icon="@drawable/ic_tweet_action_add_pocket"
        android:title="@string/timeline_tweet_action_add_pocket"
        android:visible="false"
        />

</menu>